--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
+@import 'bootswatch/cosmo/variables';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap/theme';
 @import './monokai';
+@import 'bootswatch/cosmo/bootswatch';
