--- a/app/views/shared/_sidebar.html.slim
+++ b/app/views/shared/_sidebar.html.slim
@@ -1,4 +1,6 @@
 .col-sm-3.col-sm-offset-1.blog-sidebar
   .sidebar-module.sidebar-module-inset.well
     h4 About
-    p Etiam porta sem malesuada magna mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+    p Ben Radler is an Engineer at OneLogin in San Francisco.
+    p Ruby, Javascript, and quadcopters rule.
+    p I blog about anything that interests me.
