--- a/app/views/blog/posts/show.html.slim
+++ b/app/views/blog/posts/show.html.slim
@@ -1,6 +1,6 @@
 article
   h2= @post.title
-  = render partial: "meta", locals: { post: @post }
+  = render partial: 'meta', locals: { post: @post }
   = markdown @post.content
   hr
-  p.action= link_to "← Back to Overview", blog_posts_path
+  p.action= link_to '← Back to Overview', blog_posts_path
