--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,11 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
+    javascript:
+      var disqus = {
+        'activate' : true,
+        'shortname' : 'benradler'
+      };
   body
     = render 'shared/navigation'
     .container
@@ -12,3 +17,4 @@ html
         = yield
       = render 'shared/sidebar'
     = render 'shared/footer'
+    = render 'shared/analytics' if Rails.env.production?
