--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,21 +1,19 @@
 nav class='navbar navbar-default'
   div class='container-fluid'
-    / Brand and toggle get grouped for better mobile display
+    - # Brand and toggle get grouped for better mobile display
     div class='navbar-header'
       button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'
         span class='sr-only' Toggle navigation
         span class='icon-bar'
         span class='icon-bar'
         span class='icon-bar'
-      a class='navbar-brand' href='#' benradler.com
+      = link_to 'benradler.com', root_path, class: 'navbar-brand'
 
-    / Collect the nav links, forms, and other content for toggling
+    - # Collect the nav links, forms, and other content for toggling
     div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'
       ul class='nav navbar-nav'
         li class='active'
-          a href='#' Home
+          = link_to 'Home', root_path
           span class='sr-only' (current)
         li
-          a href='#' Blog
-        li
-          a href='#' Contact Us
+          = link_to 'Contact Us', page_path(:contact_us)
