--- a/app/views/blog/posts/show.html.slim
+++ b/app/views/blog/posts/show.html.slim
@@ -1,7 +1,7 @@
 article
   h2 = @post.title
   = render partial: 'meta', locals: { post: @post }
-  = markdown @post.content
+  = markdown @post.body
   hr
   p.action = link_to '← Back to Overview', blog_posts_path
   = render 'shared/disqus_thread'
