--- a/app/assets/stylesheets/admin/_variables.css.scss
+++ b/app/assets/stylesheets/admin/_variables.css.scss
@@ -1,6 +1,6 @@
 //
 // override active admin sass variables here
-// @see eadmin/blob/master/app/assets/stylesheets/active_admin/mixins/_variables.scss
+// @see https://github.com/activeadmin/activeadmin/blob/master/app/assets/stylesheets/active_admin/mixins/_variables.scss
 //
 // Colors
 //$body-background-color: #FFF !default;
