--- a/app/views/admin/blog_posts/_markdown_editor.html.slim
+++ b/app/views/admin/blog_posts/_markdown_editor.html.slim
@@ -1,4 +1,4 @@
-fieldset.inputs
+- f.inputs 'Body' do
   #editor
     textarea#blog_post_body name="blog_post[body]" v-model="input"
       = resource.body
