--- a/app/assets/stylesheets/shared/_footer.sass
+++ b/app/assets/stylesheets/shared/_footer.sass
@@ -1,8 +1,10 @@
-body > footer
+#main > footer
   background-color: lighten($gray-base, 97%)
   font-size: $font-size-small
   text-align: center
   padding: 20px 0
-  border-top: 1px solid $gray-lighter
+  margin-bottom: 20px
+  border: 1px solid $gray-lighter
+  width: 100%
   p
     margin: 0
