--- a/app/assets/stylesheets/bootstrap/_variables.sass
+++ b/app/assets/stylesheets/bootstrap/_variables.sass
@@ -1,4 +1,11 @@
 //
 // https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss
 //
+$brand_primary: #ef4f47
 $navbar-border-radius: 0px
+$navbar-default-bg: $brand_primary
+
+//
+// custom variables
+//
+$brand_secondary: #75d9c6
