--- a/app/views/pages/contact_us.html.slim
+++ b/app/views/pages/contact_us.html.slim
@@ -1,2 +1,2 @@
-= content_for :page_title, 'Contact Us - Get in touch with Ben Radler'
-| Contact me or something!
+- content_for :page_title, 'Contact Me'
+| the contact us page content
