--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,10 +10,13 @@ html
         'activate' : true,
         'shortname' : 'benradler'
       };
-  body
-    .container-fluid
-      = render 'shared/navigation'
-      #main.col-sm-8.col-sm-offset-4
-        = yield
+  body class="#{@body_class}"
+    .site
+      = render 'shared/header'
+      section class='page-content primary' role='main'
+        - if controller_name =~ /page/
+          = render 'shared/page'
+        - else
+          = yield
         = render 'shared/footer'
     = render 'shared/analytics' if Rails.env.production?
