--- a/app/views/shared/_disqus_thread.html.slim
+++ b/app/views/shared/_disqus_thread.html.slim
@@ -1,14 +1,15 @@
-#disqus_thread.comments
-  javascript:
-    if (disqus.activate) {
-      var disqus_shortname = disqus.shortname;
-      var disqus_identifier = '{{id}}';
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function () {
-        var dsq = document.createElement('script');
-        dsq.type = 'text/javascript';
-        dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      }());
-    }
+aside class='post-aside'
+  #disqus_thread.comments
+    javascript:
+      if (disqus.activate) {
+        var disqus_shortname = disqus.shortname;
+        var disqus_identifier = '{{id}}';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+          var dsq = document.createElement('script');
+          dsq.type = 'text/javascript';
+          dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        }());
+      }
