--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,2 +1,2 @@
-footer
-  p Copyright ©#{Time.now.year} #{link_to 'benradler.com', 'http://benradler.com'}, all rights reserved. I love you.
+footer.site-footer
+  .footer-text Copyright ©#{Time.now.year} #{link_to 'benradler.com', root_path}, all rights reserved. I love you.
