--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,7 @@ html
     .site
       = render 'shared/header'
       section class='page-content primary' role='main'
+        = render 'shared/flash'
         - if controller_name =~ /page/
           = render 'shared/page'
         - else
