Add bourbon bitters

--- a/app/assets/stylesheets/base/_settings.scss.erb
+++ b/app/assets/stylesheets/base/_settings.scss.erb
@@ -14,6 +14,7 @@
 @import "schemes/color-scheme-0"; // default color scheme
 @import "normalize.css/normalize"; // reset html elements
 @import "bourbon/app/assets/stylesheets/bourbon"; // mixin library
+@import "../bitters/base/base"; // bitters 1.0
 @import "neat/app/assets/stylesheets/neat-helpers"; // helpers for the grid
 
 /******************************************************************************\
