honeypot captcha working

--- a/app/views/pages/contact_me.html.slim
+++ b/app/views/pages/contact_me.html.slim
@@ -3,4 +3,5 @@
   = f.text_field :name,    placeholder: 'name'
   = f.text_field :email,   placeholder: 'email'
   = f.text_area  :message, placeholder: 'message'
+  = f.text_field :nickname, style: 'display: none'
   = f.submit 'Send', data: { disable_with: 'Sending' }
