--- a/app/assets/stylesheets/bitters/base/_variables.scss
+++ b/app/assets/stylesheets/bitters/base/_variables.scss
@@ -16,18 +16,31 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
+$orange: #ef4f47;
+$turquoise: #75d9c6;
+$red: #ff5c5c;
 $blue: #477dca;
-$dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #ddd;
+$dark-gray: #111;
+$medium-gray: #ddd;
+$light-gray: #fafaf9;
+$twitter: #00acee;
+
+// Scheme font colors (leftover artifact from ghost theme)
+// Change these to quickly alter all colors in the "scheme"
+$light: $light-gray !default;
+$dark: $dark-gray !default;
+$color-1: $orange !default;
+$color-2: $turquoise !default;
 
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $color-1;
+$text: $dark;
+
 
 // Border
-$base-border-color: $light-gray;
+$base-border-color: $medium-gray;
 $base-border: 1px solid $base-border-color;
 
 // Forms
