Hide-able flashes; contact_me => contact-me

--- a/app/assets/stylesheets/refills/_flashes.scss
+++ b/app/assets/stylesheets/refills/_flashes.scss
@@ -12,7 +12,9 @@ $success-color: #e6efc2 !default;
   margin-bottom: $base-spacing / 2;
   padding: $base-spacing / 2;
   text-align: center;
-
+  &:hover {
+    cursor: pointer;
+  }
   a {
     color: darken($color, 70%);
 
