--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -23,4 +23,4 @@ header class='sidebar-header'
         | Collapse
     ul.main-menu
       li.menu-item = link_to 'home', root_path
-      li.menu-item = link_to 'contact me', page_path(:contact_me)
+      li.menu-item = link_to 'contact me', page_path('contact-me')
