--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,2 @@
 - flash.each do |name, msg|
-  = content_tag :div, msg, class: "flash-#{name}"
+  = content_tag :div, msg, class: "flash flash-#{name}"
