--- a/app/assets/stylesheets/bitters/base/_buttons.scss
+++ b/app/assets/stylesheets/bitters/base/_buttons.scss
@@ -1,9 +1,12 @@
 #{$all-button-inputs},
-button {
+button,
+.button {
   @include appearance(none);
+  @include inline-block;
+  @include transition(background 0.2s ease-in-out);
   -webkit-font-smoothing: antialiased;
   background-color: $action-color;
-  border-radius: $base-border-radius;
+  // border-radius: $base-border-radius;
   border: none;
   color: #fff;
   cursor: pointer;
