--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -7,6 +7,6 @@
       = render partial: 'meta', locals: { post: post }
       div class='post-content' itemprop='articleBody'
         = markdown post.excerpt
-        = link_to 'Continue reading →', blog_posts_permalink_path(post), class: 'read-more'
+        = link_to 'Continue reading →', blog_posts_permalink_path(post), class: 'button'
 
 = paginate @posts
