Featured image support
- fix CSS to allow overflow scrolling on markdown rendered <div>

--- a/app/views/admin/blog_posts/_form.html.slim
+++ b/app/views/admin/blog_posts/_form.html.slim
@@ -2,6 +2,7 @@
   - f.inputs 'Post Metadata' do
     - f.input :title
     - f.input :published
+    - f.input :featured_image_url, as: :string
     - f.input :user_id, as: :select, collection: User.all.map{ |u| [u.name, u.id] }
     - f.input :created_at
     - f.input :updated_at
