--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -1,8 +1,6 @@
 - @posts.each do |post|
   article id="post-#{post.id}" class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
-    .post-thumbnail
-      - # featured image goes here
-
+    .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url
     .content-wrapper
       = render partial: 'meta', locals: { post: post }
       div class='post-content' itemprop='articleBody'
