--- a/app/views/blog/posts/show.html.slim
+++ b/app/views/blog/posts/show.html.slim
@@ -1,12 +1,9 @@
 article id="post-#{@post.id}" class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
-
-  .post-thumbnail
-    - # featured image goes here
-
-    .content-wrapper
-      = render partial: 'meta', locals: { post: @post }
-      div class='post-content' itemprop='articleBody'
-        = markdown @post.body
-        hr
-        p.action = link_to '← Back to Overview', blog_posts_path
-        = render 'shared/disqus_thread'
+  .post-thumbnail = image_tag @post.featured_image_url if @post.featured_image_url
+  .content-wrapper
+    = render partial: 'meta', locals: { post: @post }
+    div class='post-content' itemprop='articleBody'
+      = markdown @post.body
+      hr
+      p.action = link_to '← Back to Overview', blog_posts_path
+      = render 'shared/disqus_thread'
