--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'My Blog about Technology',
+                description: 'Ben Radler is an Engineer at OneLogin Inc in San Francisco. He works with technologies like Ruby, Rails, Javascript, Node.js'
+
 - @posts.each do |post|
   article id="post-#{post.id}" class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
     .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url
