--- a/app/views/pages/contact-me.html.slim
+++ b/app/views/pages/contact-me.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'Contact Me',
+                description: 'Contact Ben Radler for questions about Ruby, Rails, Node.js, Javascript'
+
 - content_for :page_title, 'Contact Me'
 = form_for ContactForm.new, url: contact_forms_path, validate: true do |f|
   = f.text_field :name,    placeholder: 'name'
