Load font assets via HTTPS

--- a/app/assets/stylesheets/base/_settings.scss.erb
+++ b/app/assets/stylesheets/base/_settings.scss.erb
@@ -10,7 +10,7 @@
     Vendor imports
 \******************************************************************************/
 
-@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700"); // google fonts
+@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700"); // google fonts
 @import "normalize.css/normalize"; // reset html elements
 @import "bourbon/app/assets/stylesheets/bourbon"; // mixin library
 @import "../bitters/base/base"; // bitters 1.0
