--- a/app/views/blog/posts/show.html.slim
+++ b/app/views/blog/posts/show.html.slim
@@ -8,5 +8,5 @@ article id="post-#{@post.id}" class='post' role='article' itemscope='' itemtype=
     div class='post-content' itemprop='articleBody'
       = markdown @post.body
       hr
-      p.action = link_to '← Back to Overview', blog_posts_path
+      p.action = link_to '← Back to Overview', blog_posts_path, class: 'button'
       = render 'shared/disqus_thread'
