--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,9 @@ doctype html
 html
   head
     = display_meta_tags
+    meta name='HandheldFriendly' content='True'
+    meta name='MobileOptimized' content='320'
+    meta name='viewport' content='width=device-width, initial-scale=1.0'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
