Proper heading padding in editor render

--- a/app/assets/stylesheets/admin/_markdown_editor.sass
+++ b/app/assets/stylesheets/admin/_markdown_editor.sass
@@ -3,6 +3,9 @@
     background-color: #fff
     overflow: scroll
 
+    h1, h2, h3, h4, h5, h6
+      margin-top: 1.25em
+
   textarea,
   div
     display: inline-block
