--- a/app/assets/stylesheets/admin/_markdown_editor.sass
+++ b/app/assets/stylesheets/admin/_markdown_editor.sass
@@ -6,6 +6,9 @@
     h1, h2, h3, h4, h5, h6
       margin-top: 1.25em
 
+    p
+      margin: 0.75em 0
+
   textarea,
   div
     display: inline-block
