Fix rubocop complains
- refactor set_body_class to body_class
- actually use Blog::Post#more_text? in index.slim

--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -8,6 +8,7 @@
       = render partial: 'meta', locals: { post: post }
       div class='post-content' itemprop='articleBody'
         = markdown post.excerpt
-        = link_to 'Continue reading →', blog_posts_permalink_path(post), class: 'button'
+        - if post.more_text?
+          = link_to 'Continue reading →', blog_posts_permalink_path(post), class: 'button'
 
 = paginate @posts
