--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -3,7 +3,7 @@
 
 - @posts.each do |post|
   article id="post-#{post.id}" class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
-    .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url
+    .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url.present?
     .content-wrapper
       = render partial: 'meta', locals: { post: post }
       div class='post-content' itemprop='articleBody'
