--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -11,7 +11,7 @@ header class='sidebar-header'
         a href='http://youtube.com/benradler' title='youtube' o
         a href='http://twitter.com/benradler' title='twitter' &#x6b;
         a href='http://instagram.com/lordradler' title='instagram' r
-        a href="#{blog_posts_path(format: :atom)}" title='RSS Feed' &#x76;
+        a href="#{blog_posts_path(format: :rss)}" title='RSS Feed' &#x76;
 
   .second
     a class='expander' title='Show menu'
