--- a/app/assets/stylesheets/bitters/base/_typography.scss
+++ b/app/assets/stylesheets/bitters/base/_typography.scss
@@ -17,7 +17,7 @@ h6 {
   font-family: $heading-font-family;
   font-size: $base-font-size;
   line-height: $heading-line-height;
-  margin: 0 0 $small-spacing;
+  margin: $medium-spacing 0 $small-spacing;
   text-transform: uppercase;
 }
 
