--- a/app/assets/stylesheets/bitters/base/_variables.scss
+++ b/app/assets/stylesheets/bitters/base/_variables.scss
@@ -12,7 +12,8 @@ $heading-line-height: 1.0;
 // Other Sizes
 $base-border-radius: 3px;
 $base-spacing: $base-line-height * 1em;
-$small-spacing: $base-spacing / 2;
+$medium-spacing: $base-spacing / 1.5;
+$small-spacing: $base-spacing / 3;
 $base-z-index: 0;
 
 // Colors
