--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -4,7 +4,7 @@ header class='sidebar-header'
     .header-content
       a class='blog-title' href="#{root_path}" title='benradler.com'
         | benradler.com
-        span class='byline' engineer @ onelogin in san francisco
+        span class='byline' engineer in san francisco
       .social-icons
         a href='http://stackoverflow.com/users/418864/professormeowingtons' title='stackoverflow' &#x73;
         a href='http://github.com/lordnibbler' title='GitHub' n
