--- a/app/views/blog/posts/_meta.html.slim
+++ b/app/views/blog/posts/_meta.html.slim
@@ -3,13 +3,9 @@ h2 class='post-title'
     = post.title
 
 .post-meta
-  | Posted&nbsp;
   span
     time datetime="#{post.created_at.to_formatted_s(:iso8601)}" itemprop='datePublished'
-      = l post.created_at, format: :long
-    | &nbsp;by&nbsp;
-    a href=''
-    = post.author
+      = post.created_at.strftime('%B %-d, %Y %l:%M%P')
     /- if post.tags
     /  .post-tags
     /    | Tags:
