--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -1,5 +1,5 @@
 - set_meta_tags title: 'My Blog about Technology',
-                description: 'Ben Radler is an Engineer at OneLogin Inc in San Francisco. He works with technologies like Ruby, Rails, Javascript, Node.js'
+                description: 'Ben Radler is an Engineer in San Francisco. He uses technology like Ruby, Rails, Javascript, Node.js'
 
 - @posts.each do |post|
   article id="post-#{post.id}" class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
