Add Kaminari pagination theme for Bourbon

--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -181,7 +181,7 @@ article.page .post-meta {
 
 .pagination {
   @include clearfix;
-  margin: 1em 5%;
+  margin: 1em 5% 2em 5%;
   text-align: center;
   font-size: 1.1em;
 }
