Don't try to load the non-existent .woff2 font

--- a/app/assets/stylesheets/base/_settings.scss.erb
+++ b/app/assets/stylesheets/base/_settings.scss.erb
@@ -83,7 +83,7 @@ $xlarge: new-breakpoint(min-width 1200px);
 
 // include icon font files
 $asset-pipeline: true; // tell bourbon internals to use font-url()
-@include font-face('northemes-icons', 'northemes-icons');
+@include font-face('northemes-icons', 'northemes-icons', $file-formats: eot woff ttf svg);
 
 /******************************************************************************\
     Functions
