Fix error page tpyos
* memememememe

--- a/app/views/errors/unprocessable_entity.slim
+++ b/app/views/errors/unprocessable_entity.slim
@@ -2,5 +2,5 @@
 - content_for :page_title, '422 - Unprocessable Entity'
 
 | Sorry, seems like you're trying to do something you shouldn't!&nbsp;
-= link_to 'Contact me me here', page_path('contact-me')
+= link_to 'Contact me here', page_path('contact-me')
 | if you believe you received this error by mistake.
