--- a/app/views/errors/file_not_found.slim
+++ b/app/views/errors/file_not_found.slim
@@ -2,5 +2,5 @@
 - content_for :page_title, '404 - File Not Found'
 
 | The page you were looking for could not be found.  If you feel you reached a page that should exist, please&nbsp;
-= link_to 'contact me me here', page_path('contact-me')
+= link_to 'contact me here', page_path('contact-me')
 |.
