Improve meta tags

--- a/app/views/blog/posts/index.html.slim
+++ b/app/views/blog/posts/index.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: 'My Blog about Technology',
+- set_meta_tags title: 'Coding, Hacking, Gadgets, and Technology Blog',
                 description: 'Ben Radler is an Engineer in San Francisco. He uses technology like Ruby, Rails, Javascript, Node.js'
 
 - @posts.each do |post|
