Cleanup and docs

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,3 +4,6 @@ $rails: true
 
 @import 'base/style'
 @import 'shared/pygment_monokai'
+
+// @see https://github.com/justin808/react-webpack-rails-tutorial/blob/master/client/assets/stylesheets/_bootstrap-variables-customization.scss
+@import 'helper-customization'
