--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,3 +1,7 @@
+// @note this variable will need to be set for webpack-dev-server to use appropriate img-url,
+//   and font-url
+// $rails: true
 @import 'base/style'
+@import 'refills/**/*'
 @import 'shared/pygment_monokai'
 @import 'pages/**/*'
