webpack dev server improvements and cleanup
* remove bootstrap remnants
* rename bootstrap stylesheets to something sensible
* still need to update _variable-customizations functions to work in webpack-dev-server

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,5 @@
-// @note this variable will need to be set for webpack-dev-server to use appropriate img-url,
-//   and font-url
-// $rails: true
+// @note this variable will is set for webpack-dev-server to use appropriate img-url
+$rails: true
 @import 'base/style'
 @import 'refills/**/*'
 @import 'shared/pygment_monokai'
