Don't sort Posts; full width posts
* update styling to be full width

--- a/app/assets/stylesheets/bitters/base/_buttons.scss
+++ b/app/assets/stylesheets/bitters/base/_buttons.scss
@@ -31,4 +31,9 @@ button,
     cursor: not-allowed;
     opacity: 0.5;
   }
+  &.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
