use webpack with activeadmin

--- a/app/views/admin/blog_posts/_markdown_editor.html.slim
+++ b/app/views/admin/blog_posts/_markdown_editor.html.slim
@@ -2,15 +2,4 @@
   #editor
     textarea#blog_post_body name="blog_post[body]" v-model="input"
       = resource.body
-    div v-html="input | marked"
-
-javascript:
-  var vm = new Vue({
-    el: '#editor',
-    data: {
-      input: ''
-    },
-    filters: {
-      marked: marked
-    }
-  });
+    div#blog_post_body_marked
