migrate sprockets application.js to webpack application.js (except for modernizr)

--- a/app/views/shared/_disqus_thread.html.slim
+++ b/app/views/shared/_disqus_thread.html.slim
@@ -1,6 +1,12 @@
 aside class='post-aside'
   #disqus_thread.comments
     javascript:
+      // activate disqus
+      var disqus = {
+        'activate' : true,
+        'shortname' : 'benradler'
+      };
+
       if (disqus.activate) {
         var disqus_shortname = disqus.shortname;
         var disqus_identifier = "#{@post.slug}";
