--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -4,13 +4,11 @@ header class='sidebar-header'
     .header-content
       a class='blog-title' href="#{root_path}" title='benradler.com'
         | benradler.com
-        span class='byline' engineer in san francisco
+        span class='byline' software engineer in san francisco
       .social-icons
         a href='http://stackoverflow.com/users/418864/professormeowingtons' title='stackoverflow' &#x73;
         a href='http://github.com/lordnibbler' title='GitHub' n
         a href='http://youtube.com/benradler' title='youtube' o
-        a href='http://twitter.com/benradler' title='twitter' &#x6b;
-        a href='http://instagram.com/lordradler' title='instagram' r
         a href="#{blog_posts_path(format: :rss)}" title='RSS Feed' &#x76;
 
   .second
