Update main links

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -20,5 +20,6 @@ header class='sidebar-header'
         span class='icon collapse'
         | Collapse
     ul.main-menu
-      li.menu-item = link_to 'home', root_path
+      li.menu-item = link_to 'home',       root_path
+      li.menu-item = link_to 'blog',       blog_posts_path
       li.menu-item = link_to 'contact me', page_path('contact-me')
