--- a/app/assets/stylesheets/base/_post-formats.scss
+++ b/app/assets/stylesheets/base/_post-formats.scss
@@ -19,8 +19,9 @@
     }
 
     .post-content {
-      margin-top: 3em;
-      margin-left: 3em;
+      margin-top: 2em;
+      margin-left: 6em;
+      margin-right: 2em;
       font-size: 0.85em;
       font-style: italic;
     }
