Adjust font sizes and padding of articles/titles

--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -45,7 +45,8 @@
 
 article.post,
 .author {
-  padding: 0 0 3em 0;
+  padding: 0 0 1.5em 0;
+  margin-bottom: 3em;
   position: relative;
   overflow: hidden;
   font-size: $base-font-size * 0.9;
