Add programming languages and call to action

--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -113,6 +113,9 @@ article.post,
     vertical-align: middle;
     margin: 10px;
     object-fit: contain;
+    &.large {
+      height: 100px;
+    }
   }
 }
 
