New color scheme

--- a/app/assets/stylesheets/bitters/base/_variables.sass
+++ b/app/assets/stylesheets/bitters/base/_variables.sass
@@ -25,15 +25,24 @@ $orange: #ff7f00
 
 // Change these to quickly alter all colors in the "scheme"
 // https://color.adobe.com/Buddha-in-Rain-color-theme-242145/
-$color-1: $green !default
-$color-2: $dark-green !default
-$color-3: $olive !default
-$color-4: $yellow !default
-$color-5: $orange !default
+//$color-1: $green !default
+//$color-2: $dark-green !default
+//$color-3: $olive !default
+//$color-4: $yellow !default
+//$color-5: $orange !default
 
-// https://color.adobe.com/oddend-color-theme-2181/
-// $color-1: #01b0f0 !default
-// $color-2: #333 !default
+// custom theme colors
+$purple: #2F3973
+$dark-purple: #051940
+$blue: #2561D9
+$black: #031326
+$light-blue: #94D7F2
+
+$color-1: $purple !default
+$color-4: $dark-purple !default
+$color-3: $blue !default
+$color-2: $black !default
+$color-5: $light-blue !default
 
 // colors (general)
 $red: #ff5c5c
