--- a/app/views/pages/hire-me.html.slim
+++ b/app/views/pages/hire-me.html.slim
@@ -12,7 +12,7 @@ article class='post' role='article' itemscope='' itemtype='http://schema.org/Art
       = image_tag('logo-lyft.png', class: 'logo')
       = image_tag('logo-onelogin.png', class: 'logo')
     hr
-    p He's built complex security systems at Onelogin, online store platforms which integrate with YouTube and Amazon at Teespring, and simulation platforms to scale Lyft to thousands of rides per minute.
+    p He's built an identity provider at Onelogin, an online store platform integrated with YouTube and Amazon at Teespring, and a Simulation Platform which scaled Lyft to thousands of rides per minute.
 
 article class='post tag-format-tag' role='article' itemscope='' itemtype='http://schema.org/Article'
   div class='post-content' itemprop='articleBody'
