--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -6,8 +6,9 @@ header class='sidebar-header'
         | benradler.com
         span class='byline' software engineer in san francisco
       .social-icons
-        a href='http://stackoverflow.com/users/418864/professormeowingtons' title='stackoverflow' &#x73;
+        a href='https://www.linkedin.com/in/benradler/' title='linkedin' m
         a href='http://github.com/lordnibbler' title='GitHub' n
+        a href='http://stackoverflow.com/users/418864/professormeowingtons' title='stackoverflow' &#x73;
         a href='http://youtube.com/benradler' title='youtube' o
         a href="#{blog_posts_path(format: :rss)}" title='RSS Feed' &#x76;
 
