--- a/app/views/pages/hire-me.html.slim
+++ b/app/views/pages/hire-me.html.slim
@@ -22,7 +22,11 @@ article class='post tag-format-tag' role='article' itemscope='' itemtype='http:/
 
 article class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
   div class='post-content' itemprop='articleBody'
-    | Programming Languages:
+    | I work with several popular programming languages and frameworks:
+    ul
+      li Ruby / Ruby on Rails / Sinatra
+      li Python / Django / Flask
+      li Javascript / ReactJS
     hr
     div.centered
       = image_tag('language-ruby.png', class: 'logo large', alt: 'Ruby', title: 'Ruby')
