rename hire-me -> home

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,5 +1,5 @@
-- set_meta_tags title: 'Hire Me',
-  description: 'Hire Ben Radler for software engineering. Ruby, Rails, Node.js, React.js, Javascript'
+- set_meta_tags title: 'Home | Hire Me',
+  description: 'Home | Hire Ben Radler for software engineering. Ruby, Rails, Python, ReactJS, Javascript'
 
 - content_for :page_title, 'I\'m Available To Help You!'
 
