--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -110,6 +110,7 @@ article.post,
   &.logo {
     display: flex;
     height: 50px;
+    width: 30%;
     vertical-align: middle;
     margin: 10px;
     object-fit: contain;
