Add link to teespring store

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -23,4 +23,5 @@ header class='sidebar-header'
     ul.main-menu
       li.menu-item = link_to 'home',       root_path
       li.menu-item = link_to 'blog',       blog_posts_path
+      li.menu-item = link_to 'store', 'https://teespring.com/stores/san-francisco', target: :_blank
       li.menu-item = link_to 'contact me', page_path('contact-me')
