--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -24,4 +24,5 @@ header class='sidebar-header'
       li.menu-item = link_to 'home',       root_path
       li.menu-item = link_to 'blog',       blog_posts_path
       li.menu-item = link_to 'store', 'https://teespring.com/stores/san-francisco', target: :_blank
+      li.menu-item = link_to 'photography', page_path('photography')
       li.menu-item = link_to 'contact me', page_path('contact-me')
