--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -105,7 +105,8 @@ article.post,
 .home-template .post-content :first-child .fluid-width-video-wrapper,
 .home-template .post-content>img:first-child,
 .home-template .post-content>.fluid-width-video-wrapper:first-child {
-  display:none;
+  // TODO: why is this here? must be disabled for photoswipe
+  // display:none;
 
   &.logo {
     display: flex;
