--- a/app/views/pages/photography.html.slim
+++ b/app/views/pages/photography.html.slim
@@ -3,18 +3,34 @@
 
 - content_for :page_title, 'Photography Gallery'
 
+.my-gallery itemscope="" itemtype="http://schema.org/ImageGallery"
+  figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
+    a data-size="1024x1024" href="https://farm3.staticflickr.com/2567/5697107145_a4c2eaa0cd_o.jpg" itemprop="contentUrl"
+      img alt=("Image description") itemprop="thumbnail" src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" /
+    figcaption itemprop=("caption description")  Image caption  1
+  figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
+    a data-size="964x1024" href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl"
+      img alt=("Image description") itemprop="thumbnail" src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" /
+    figcaption itemprop=("caption description")  Image caption 2
+  figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
+    a data-size="1024x683" href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl"
+      img alt=("Image description") itemprop="thumbnail" src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" /
+    figcaption itemprop=("caption description")  Image caption 3
+  figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
+    a data-size="1024x768" href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl"
+      img alt=("Image description") itemprop="thumbnail" src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" /
+    figcaption itemprop=("caption description")  Image caption 4
+
 /! Root element of PhotoSwipe. Must have class pswp.
 .pswp aria-hidden="true" role="dialog" tabindex="-1"
   /!
     | Background of PhotoSwipe.
-    | It's a separate element as animating opacity is faster than rgba().
+    | It's a separate element, as animating opacity is faster than rgba().
   .pswp__bg
   /! Slides wrapper with overflow:hidden.
   .pswp__scroll-wrap
-    /!
-      | Container that holds slides.
-      | PhotoSwipe keeps only 3 of them in the DOM to save memory.
-      | Don't modify these 3 pswp__item elements, data is added later on.
+    /! Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory.
+    /! don't modify these 3 pswp__item elements, data is added later on.
     .pswp__container
       .pswp__item
       .pswp__item
