WIP on masonry/infinite scroll/photoswipe

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,2 +1,16 @@
 @import 'base/style'
 @import 'shared/pygment_monokai'
+
+// todo: move to photography page specific stylesheet via webpack
+.photography-template
+  figure
+     margin: 0
+
+/* fluid 5 columns */
+.grid-sizer,
+.grid-item
+  width: 33.33%
+
+/* 2 columns wide */
+.grid-item--width2
+  width: 40%
