--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -21,8 +21,8 @@ header class='sidebar-header'
         span class='icon collapse'
         | Collapse
     ul.main-menu
-      li.menu-item = link_to 'home',       root_path
-      li.menu-item = link_to 'blog',       blog_posts_path
+      li.menu-item = link_to 'home', root_path
+      li.menu-item = link_to 'blog', blog_posts_path
       li.menu-item = link_to 'store', 'https://teespring.com/stores/san-francisco', target: :_blank
-      li.menu-item = link_to 'photography', page_path('photography')
+      li.menu-item = link_to 'photography', photography_path
       li.menu-item = link_to 'contact me', page_path('contact-me')
