--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -3,30 +3,12 @@
 
 - content_for :page_title, 'Photography Gallery'
 
-.my-gallery itemscope="" itemtype="http://schema.org/ImageGallery"
+.my-gallery.grid itemscope="" itemtype="http://schema.org/ImageGallery"
+  .grid-sizer
   - @photos.each do |photo|
-    figure.image itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
+    figure.image.grid-item itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
       a data-size="#{photo[:photo_large][:width]}x#{photo[:photo_large][:height]}" href="#{photo[:photo_large][:url]}" itemprop="contentUrl"
         img alt=("Image description") itemprop="thumbnail" src="#{photo[:photo_thumbnail][:url]}" /
-      / figcaption itemprop=("caption description") = photo[:title]
-
-/ .my-gallery itemscope="" itemtype="http://schema.org/ImageGallery"
-/   figure.image itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
-/     a data-size="1024x1024" href="https://farm3.staticflickr.com/2567/5697107145_a4c2eaa0cd_o.jpg" itemprop="contentUrl"
-/       img alt=("Image description") itemprop="thumbnail" src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" /
-/     figcaption itemprop=("caption description")  Image caption  1
-/   figure.image itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
-/     a data-size="964x1024" href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl"
-/       img alt=("Image description") itemprop="thumbnail" src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" /
-/     figcaption itemprop=("caption description")  Image caption 2
-/   figure.image itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
-/     a data-size="1024x683" href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl"
-/       img alt=("Image description") itemprop="thumbnail" src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" /
-/     figcaption itemprop=("caption description")  Image caption 3
-/   figure.image itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject"
-/     a data-size="1024x768" href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl"
-/       img alt=("Image description") itemprop="thumbnail" src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" /
-/     figcaption itemprop=("caption description")  Image caption 4
 
 /! Root element of PhotoSwipe. Must have class pswp.
 .pswp aria-hidden="true" role="dialog" tabindex="-1"
